discussion/kv_engine/132591/132591_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'mad-hatter'

* mad-hatter:
  MB-40243: Simplify subdoc testapp_xattr
  MB-40162: Expand TRACE logging for bucket_get & bucket_store

Change-Id: I9e49cd6e317bed65b02738dc50d1e95ae2fac497

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-07-15 15:37:19.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-15 15:51:12.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25187/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/engine_wrapper.cc:204:36:
error: no member named "const_char_buffer" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25187/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29160/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29160/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3363/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/protocol/mcbp/engine_wrapper.cc:204:36: error: no member named "const_char_buffer" in namespace "cb" [clang-diagnostic-error]
              cb::UserDataView(cb::const_char_buffer(key)),
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/logger/logger.h:175:52: note: expanded from macro "LOG_TRACE"
    CB_LOG_ENTRY(spdlog::level::level_enum::trace, __VA_ARGS__)
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/logger/logger.h:170:37: note: expanded from macro "CB_LOG_ENTRY"
            _logger_->log(severity, __VA_ARGS__);         \
                                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3363/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/protocol/mcbp/engine_wrapper.cc:204:36:
error: no member named "const_char_buffer" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3363/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3795/ : FAILURE

Compile error at [2020-07-15T15:44:19.924Z] ../kv_engine/daemon/protocol/mcbp/engine_wrapper.cc:204:36:
error: no member named "const_char_buffer" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3795/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4689/ : FAILURE

Compile error at [2020-07-15T15:40:38.734Z] ../kv_engine/daemon/protocol/mcbp/engine_wrapper.cc:203:246:
error: ?const_char_buffer? is not a member of ?cb?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4689/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4764/ : FAILURE

Compile error at [2020-07-15T15:46:12.288Z] ../kv_engine/daemon/protocol/mcbp/engine_wrapper.cc:203:246:
error: ?const_char_buffer? is not a member of ?cb?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4764/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4873/ : FAILURE

Compile error at [2020-07-15T15:46:33.786Z] ../kv_engine/daemon/protocol/mcbp/engine_wrapper.cc:203:246:
error: ?const_char_buffer? is not a member of ?cb?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4873/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12587/ : FAILURE

Compile error at [2020-07-15T15:50:15.504Z] ../kv_engine/daemon/protocol/mcbp/engine_wrapper.cc:203:246:
error: ?const_char_buffer? is not a member of ?cb?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12587/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1870/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
